syntax = "proto3";

package keystore;

import "google/protobuf/any.proto";

message Empty {}

message SaveRequest {
	string key = 1;
	google.protobuf.Any value = 2;
}

message UpdateSet {
	repeated SaveRequests requests = 1;
}

message ReadRequest {
	string key = 1;
}

message StoreMeta {
	int64 version = 1;
}

service KeyStoreService {
        rpc Save (SaveRequest) returns (Empty) {};
				rpc Read (ReadRequest) returns (google.protobuf.Any) {};
				rpc GetMeta (Empty) returns (StoreMeta) {};
}
